name:                hie-test5
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hie-test5#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hie-test5
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:  
    base >= 4.7 && < 5,
    containers,
    text,
    scalpel,
    extra,
    url,
    interpolate,
    aeson,
    bytestring,
    vector,
    attoparsec
